Verb tense aggreement

--- a/preface_EN.tex
+++ b/preface_EN.tex
@@ -94,7 +94,7 @@ Some people say assembly language understanding is also very helpful, even if yo
 This is true.
 But this is a way for the most dedicated geeks, and it can be postponed at start.
 
-Also, self-taught people (including author of these lines) often has the problem of trying too hard on hard problems,
+Also, self-taught people (including the author of these lines) often have the problem of trying too hard on hard problems,
 skipping easy ones.
 This is a great mistake.
 Compare to sport or music -- no one starts at 100kg weights, or Paganini's Caprices.
