--- a/preface_EN.tex
+++ b/preface_EN.tex
@@ -129,7 +129,7 @@ want to support this work, it is now available for purchase.
 
 \subsection*{About the Persian/Farsi translation}
 
-In 2016 the book was translated by Mohsen Mostafa Jokar (who is also known to Iranian community for his translation of Radare manual\footnote{\url{http://rada.re/get/radare2book-persian.pdf}}).
+In 2016 the book was translated by Mohsen Mostafa Jokar (who is also known to the Iranian community for his translation of the Radare manual\footnote{\url{http://rada.re/get/radare2book-persian.pdf}}).
 It is available on the publisher’s website\footnote{\url{http://goo.gl/2Tzx0H}} (Pendare Pars).
 
 Here is a link to a 40-page excerpt: \url{https://beginners.re/farsi.pdf}.
