--- a/preface_EN.tex
+++ b/preface_EN.tex
@@ -145,5 +145,5 @@ In April 2017, translation to Chinese was completed by Chinese PTPress. They are
 The principal translator is Archer, to whom the author owes very much. He was extremely meticulous (in a good sense) and reported most of the known mistakes and bugs, which is very important in literature such as this book.
 The author would recommend his services to any other author!
 
-The guys from \href{http://www.antiy.net/}{Antiy Labs} have also helped with translation. \href{http://www.epubit.com.cn/book/onlinechapter/51413}{Here is preface} written by them.
+The guys from \href{http://www.antiy.net/}{Antiy Labs} have also helped with translation. \href{http://www.epubit.com.cn/book/onlinechapter/51413}{Here is the preface} written by them.
 
